--- a/WebApplication/Pages/Privacy.cshtml
+++ b/WebApplication/Pages/Privacy.cshtml
@@ -6,3 +6,4 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+<p>I cherish my privacy, and woe betide anyone who tries to interfere with that - Jeff Beck</p>
